# Forgerly

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Forgerly.spec  LICENSE  Makefile  NarrativeForge.spec  PLAN.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.py  tree.txt
.github/: pull_request_template.md
.github/workflows/: build.yml
config/: default_settings.json  user_settings.json
data/: narrative_forge.db  narrative_forge_dev.db  test_narrative_forge.db  test_tagging.db
dictionaries/: en_US.txt
docs/: BUGS.txt  NarrativeForgeProjectFolder.md  NarrativeForgeProjectFolder.txt  PLAN.md  SCHEMA.md  TODO.md  TODO.txt  database_architecture.md  fruchterman-reingold.md  fruchterman-reingold.txt  tree.txt  tree_command.txt
docs/api/: conf.py  index.rst  python.rst
docs/development/: STYLE_GUIDE.md
docs/development/algorithms/: fruchterman-reingold.md  spell-checker.md
docs/development/architecture/: CPP_BRIDGE.md  SCHEMA.md  database_diagram.md
docs/development/project-structure/: NarrativeForgeProjectFolder.md
docs/maintenance/: BUGS.md  TODO.md
docs/user/: GUIDE.md
documentation/: conf.py  python.rst
resources/: resources.qrc
sql/: schema_v1.sql  schema_v2.sql
src/c_lib/: graph_layout_engine.cpp  graph_layout_engine.h  nf_c_api.cpp  text_stats_engine.cpp  text_stats_engine.h
src/c_lib/graph_layout/: graph_layout_engine.cpp  graph_layout_engine.h
src/c_lib/spell_checker/: spell_checker_engine.cpp  spell_checker_engine.h  trie.h
src/c_lib/text_stats/: text_stats_engine.cpp  text_stats_engine.h
src/python/: _version.py  chapter_repository.py  db_connector.py  lore_repository.py  main.py  main_window.py  outline_manager.py  rich_text_editor.py  settings_manager.py  start_menu_window.py  tag_repository.py
src/python/repository/: chapter_repository.py  character_repository.py  lore_repository.py  note_repository.py  relationship_repository.py  tag_repository.py
src/python/services/: app_coordinator.py  character_exporter.py  export_service.py  exporter.py  lore_exporter.py  settings_manager.py  story_exporter.py  update_checker.py
src/python/ui/: chapter_editor.py  chapter_outline_manager.py  lore_editor.py  outline_manager.py  (+6 more)
src/sql/: schema_v1.sql  schema_v2.sql
styles/: dark.qss  green.qss  light.qss
tests/: conftest.py  pytest.ini  test_db_connector.py  test_place_holder.py
tests/repository/: test_chapter_repository.py  test_character_repository.py  test_lore_repository.py  test_relationship_repository.py  test_tag_repository.py
tools/: build_docs.py  check_env.py  cleanup.ps1  compile_resources.py  data_faker.py  db_inspector.py  db_reset.py  detect_cycles.py  export_schema_diagram.ps1  find-large-files.ps1  git_pre_commit.py  increment_version.py  qss_previewer.py  report-code-stats.ps1  tree.ps1  update_timestamps.py  view_docs.py
(+52 files in other folders)
