[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-forge"
version = "0.4.7-alpha"
description = "A comprehensive desktop application for authors, storytellers, and worldbuilders."
readme = "README.md"
requires-python = ">=3.12.3"
license = { text = "MIT" }
authors = [
    { name = "Narrative Forge Maintainers" }
]
keywords = ["writing", "worldbuilding", "storytelling", "pyside6", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Word Processors",
]
dependencies = [
    "arabic-reshaper==3.0.0",
    "asn1crypto==1.5.1",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.3",
    "cssselect2==0.8.0",
    "EbookLib==0.20",
    "freetype-py==2.5.1",
    "html5lib==1.1",
    "idna==3.11",
    "lxml==6.0.2",
    "oscrypto==1.3.0",
    "pillow==12.0.0",
    "pycairo==1.29.0",
    "pycparser==2.23",
    "pyHanko==0.32.0",
    "pyhanko-certvalidator==0.29.0",
    "pypdf==6.4.0",
    "PySide6==6.10.1",
    "PySide6_Addons==6.10.1",
    "PySide6_Essentials==6.10.1",
    "python-bidi==0.6.7",
    "PyYAML==6.0.3",
    "reportlab==4.4.5",
    "requests==2.32.5",
    "rlPyCairo==0.4.0",
    "shiboken6==6.10.1",
    "six==1.17.0",
    "svglib==1.6.0",
    "tinycss2==1.5.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uritools==5.0.0",
    "urllib3==2.6.0",
    "webencodings==0.5.1",
    "xhtml2pdf==0.2.17",
]

[project.optional-dependencies]
dev = [
    "alabaster==1.0.0",
    "altgraph==0.17.5",
    "babel==2.17.0",
    "brotli==1.2.0",
    "colorama==0.4.6",
    "docutils==0.21.2",
    "Faker==38.2.0",
    "fonttools==4.61.0",
    "imagesize==1.4.1",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pluggy==1.6.0",
    "pydyf==0.12.1",
    "Pygments==2.19.2",
    "pyinstaller==6.16.0",
    "pyinstaller-hooks-contrib==2025.9",
    "pyphen==0.17.2",
    "pytest==9.0.1",
    "pywin32-ctypes==0.2.3",
    "roman-numerals-py==3.1.0",
    "setuptools==80.9.0",
    "snowballstemmer==3.0.1",
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "tinyhtml5==2.0.0",
    "zopfli==0.4.0"
]

[project.scripts]
narrative-forge = "src.python.main:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"